[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/ant/ant.gd" type="Script" id=1]
[ext_resource path="res://objects/ant/ant_body.png" type="Texture" id=2]
[ext_resource path="res://objects/ant/ant_leg.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "walk"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("ant_body/ant_leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 30 )

[node name="ant" type="Area2D"]
script = ExtResource( 1 )

[node name="ant_body" type="Sprite" parent="."]
position = Vector2( 8.13086, -19.7959 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="ant_leg" type="Sprite" parent="ant_body"]
position = Vector2( -37.0868, 44.299 )
scale = Vector2( 1.19664, 1.42291 )
texture = ExtResource( 3 )
vframes = 2
hframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "walk"
anims/walk = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.63422, -22.5563 )
shape = SubResource( 2 )

[node name="forward" type="RayCast2D" parent="."]
position = Vector2( 51.0835, -24.5466 )
enabled = true
cast_to = Vector2( 50, 0 )

[node name="down" type="RayCast2D" parent="."]
position = Vector2( 45.1127, -3.98053 )
enabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_ant_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
